--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap");
 body {
-    align-items: center;
-    background: #f1f1f1;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    min-height: 100vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #c72c41;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: 'Amatic SC', cursive;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 100vh;
 }
 
-h1, h2, h3 {
-    font-family: 'Archivo', sans-serif;
-    color: #2f2f2f;
-    text-align: center;
-} 
+.container {
+  background-color: #1d0b1c;
+  border-radius: 1rem;
+  -webkit-box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
+  color: #c72c41;
+  max-width: 600px;
+  padding: 2rem 2rem .6rem;
+  position: relative;
+}
 
-h1 {
-    font-size: 2.5rem;
+details {
+  font-size: 1.8rem;
 }
 
 h2 {
-    font-size: 2rem;
+  margin-top: 5rem;
+  position: relative;
 }
 
-h3 {
-    font-size: 4rem;
-    color: #d63c3c;
+h2:before {
+  background: #c72c41;
+  content: '';
+  height: 1px;
+  position: absolute;
+  top: -1.3rem;
+  width: 100%;
 }
+/*# sourceMappingURL=style.css.map */
